--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-token: "your_token_here"         # Lichess OAuth2 Token.
+token: "lip_j47mmYNwdJzvXamyVTOg"         # Lichess OAuth2 Token.
 
 engine:                                   # Engine settings.
   dir: "./engines"                        # Directory containing the engine.
