--- a/config.yml
+++ b/config.yml
@@ -4,7 +4,7 @@ engine:                                   # Engine settings.
   dir: "./engines"                        # Directory containing the engine.
   name: "sf-12"                      # Binary name of the engine to use.
   ponder: true                            # Think on opponent's time.
-  polyglot: true
+  polyglot: 
     enabled: false                        # Activate polyglot book.
     books:
 #     white:                              # List of names of books to use as white.
@@ -34,7 +34,7 @@ engine:                                   # Engine settings.
       enabled: true                      # Activate online endgame tablebases from Lichess.
       min_time: 10                        # Time the bot must have at least to use the online move.
       timeout: 3                          # Time the server has to respond.
-  offer_draw: true
+  offer_draw: 
     enabled: false                         # Activate whether the bot should offer draw.
     score: 10                             # If the absolute value of the score is less than or equal to this value, the bot offers/accepts draw (in cp)
     consecutive_moves: 10                 # How many moves in a row the absolute value of the score has to be below the draw value
