--- a/config.yml
+++ b/config.yml
@@ -25,7 +25,7 @@ engine:                                   # Engine settings.
       min_depth: 10                       # Minimum evaluation depth.
       min_time: 40                        # Time the bot must have at least to use the online move.
       timeout: 5                          # Time the server has to respond.
-    lichess_cloud: true 
+    lichess_cloud:   
       enabled: false                      # Activate online moves from Lichess cloud eval.
       min_depth: 10                       # Minimum evaluation depth.
       min_time: 40                        # Time the bot must have at least to use the online move.
