--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,7 @@ token: "lip_j47mmYNwdJzvXamyVTOg"         # Lichess OAuth2 Token.
 
 engine:                                   # Engine settings.
   dir: "./engines"                        # Directory containing the engine.
-  name: "sf-12"                      # Binary name of the engine to use.
+  name: "stockfish"                      # Binary name of the engine to use.
   ponder: true                            # Think on opponent's time.
   polyglot:  
     enabled: false                        # Activate polyglot book.
@@ -45,7 +45,7 @@ engine:                                   # Engine settings.
     consecutive_moves: 5                  # How many moves in a row the score has to be below the resign value.
   uci_options:                            # Arbitrary UCI options passed to the engine. (Commenting allowed)
     Move Overhead: 150                    # Increase if your bot flags games too often.
-    Threads: 1                           # Max CPU threads the engine can use.
+    Threads: 4                           # Max CPU threads the engine can use.
     Hash: 256                             # Max memory (in megabytes) the engine can allocate.
 #   SyzygyPath: "/path/to/syzygy"         # Path to your local syzygy endgame tablebases
 
