--- a/config.yml
+++ b/config.yml
@@ -4,12 +4,12 @@ engine:                                   # Engine settings.
   dir: "./engines"                        # Directory containing the engine.
   name: "sf-12"                      # Binary name of the engine to use.
   ponder: true                            # Think on opponent's time.
-  polyglot:  
+  polyglot: true   
     enabled: false                        # Activate polyglot book.
-    books: 
-#     white:                              # List of names of books to use as white.
+    books: polyglot
+#     white: polyglot                             # List of names of books to use as white.
 #       - "Goi5_1.bin"
-#     black:                              # List of names of books to use as black.
+#     black:  polyglot                            # List of names of books to use as black.
 #       - "Goi5_1.bin"
      standard:                           # List of names of books to use if there is no specific book for white, black or chess960.
        - "Goi5_1.bin"  
