--- a/config.yml
+++ b/config.yml
@@ -35,7 +35,7 @@ engine:                                   # Engine settings.
       min_time: 10                        # Time the bot must have at least to use the online move.
       timeout: 3                          # Time the server has to respond.
   offer_draw:   
-    enabled: false                         # Activate whether the bot should offer draw.
+    enabled: true                          # Activate whether the bot should offer draw.
     score: 10                             # If the absolute value of the score is less than or equal to this value, the bot offers/accepts draw (in cp)
     consecutive_moves: 10                 # How many moves in a row the absolute value of the score has to be below the draw value
     min_game_length: 35                   # Earliest move in which draw is offered.
