--- a/config.yml
+++ b/config.yml
@@ -5,7 +5,7 @@ engine:                                   # Engine settings.
   name: "sf-12"                      # Binary name of the engine to use.
   ponder: true                            # Think on opponent's time.
   polyglot:   
-    enabled: true                         # Activate polyglot book.
+    enabled: false                          # Activate polyglot book.
     books: 
 #     white:                             # List of names of books to use as white.
 #       - "Goi5_1.bin"
@@ -40,7 +40,7 @@ engine:                                   # Engine settings.
     consecutive_moves: 10                 # How many moves in a row the absolute value of the score has to be below the draw value
     min_game_length: 35                   # Earliest move in which draw is offered.
   resign:
-    enabled: false                        # Activate whether the bot should resign games.
+    enabled: true                        # Activate whether the bot should resign games.
     score: -1000                          # If the score is less than or equal to this value, the bot resigns (in cp).
     consecutive_moves: 5                  # How many moves in a row the score has to be below the resign value.
   uci_options:                            # Arbitrary UCI options passed to the engine. (Commenting allowed)
