--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,7 @@ token: "lip_j47mmYNwdJzvXamyVTOg"         # Lichess OAuth2 Token.
 
 engine:                                   # Engine settings.
   dir: "./engines"                        # Directory containing the engine.
-  name: "sf-12"                      # Binary name of the engine to use.
+  name: "stockfish"                      # Binary name of the engine to use.
   ponder: true                            # Think on opponent's time.
   polyglot:   
     enabled: false                          # Activate polyglot book.
